# platform-external-bltsville

./: .gitignore  Android.mk  Makefile.am  autogen.sh  configure.ac  libbltsville_hw2d.pc.in
bltsville/include/: bvbuffdesc.h
gcbv/: gcmain.c  gcmain.h
gcbv/mirror/: gcblit.c  gcbv.c  gcbv.h  gcdbglog.c  gcfilter.c  gcmap.c
gcbv/mirror/include/: gcdbglog.h  gcioctl.h
ticpu/lib/linux/: libbltsville_ticpu.so.2.1.0.0
